Improve login validation and update incentives data